# libexif

./: .gitignore  CMakeLists.txt
impact/: CMakeLists.txt
libexif/: config.h
libjpeg/: jpeg-data.c  jpeg-data.h
my_cmake/: CMakeLists.txt
